# design_patterns

./: .gitignore  README.md
Abstract Factory/: CMakeLists.txt  README.md  main.cpp
Abstract Factory/Libs/: CMakeLists.txt
Abstract Factory/Libs/UI_elements/: CMakeLists.txt
Abstract Factory/Libs/UI_elements/Inc/: Alert.hpp  Button.hpp  LinuxAlert.hpp  LinuxButton.hpp  UIElement.hpp  WindowsAlert.hpp  WindowsButton.hpp
Abstract Factory/Libs/UI_elements/Src/: LinuxAlert.cpp  LinuxButton.cpp  WindowsAlert.cpp  WindowsButton.cpp
Abstract Factory/Libs/UI_factory/: CMakeLists.txt
Abstract Factory/Libs/UI_factory/Inc/: LinuxUIFactory.hpp  UIFactory.hpp  WindowsUIFactory.hpp
Abstract Factory/Libs/UI_factory/Src/: LinuxUIFactory.cpp  WindowsUIFactory.cpp
Adapter/: README.md  main.cpp
Command/: CMakeLists.txt  README.md  main.cpp
Command/Inc/: ICommand.hpp  LightOffCommand.hpp  LightOnCommand.hpp  LightReceiver.hpp  RemoteInvoker.hpp
Command/Src/: LightOffCommand.cpp  LightOnCommand.cpp  LightReceiver.cpp  RemoteInvoker.cpp
Decorator/: README.md  main.cpp
Facade/: README.md  main.cpp
Factory Method/: README.md  main.cpp
Observer/: README.md  main.cpp
Proxy/: CMakeLists.txt  README.md  main.cpp
Proxy/Inc/: BookParser.hpp  IBookParser.hpp  LazyBookParserProxy.hpp
Proxy/Src/: BookParser.cpp  LazyBookParserProxy.cpp
Singleton/: CMakeLists.txt  README.md  Singleton.cpp  Singleton.hpp  main.cpp
Strategy/: README.md  main.cpp
